--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
         </profile>
     </profiles>
 
+    <dependencies>
+    <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.4.199</version>
+    </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
